# rust-gpu-plugin-shader-test

bevy-app/: Cargo.toml
bevy-app/crates/viewer/: Cargo.toml
bevy-app/crates/viewer/examples/: colorful-material.rs
rust-gpu/crates/shader/: Cargo.toml
rust-gpu/crates/shader/src/: lib.rs
